# UVBI-and-KalmanFramework-Standalone

./: CMakeLists.txt  check-includes.py  normalize-includes.py
apps/: CMakeLists.txt
apps/OfflineProcessing/: CSVCellGroup.h  GenerateBlobDebugImage.h  OfflineProcessing.cpp
apps/ParameterFinder/: LoadRows.h  OptimizationBase.h  UtilityFunctions.h
apps/camera-latency-testing/: CMakeLists.txt  MeasureTrackingCameraLatency.cpp
apps/unifiedvideoinertial/OfflineProcessing/: CMakeLists.txt  GenerateBlobDebugImage.h  OfflineProcessing.cpp  QuatToEuler.h
apps/unifiedvideoinertial/ParameterFinder/: LoadRows.h  OptimizationBase.h  UtilityFunctions.h
apps/unifiedvideoinertial/ViewTrackingCamera/: ViewTrackingCamera.cpp
apps/videotrackershared/BlobExtractionDemo/: CMakeLists.txt
inc/DirectShowCameraLib/: MediaSampleExchange.h  directx_camera_server.h
inc/FlexKalman/: CSVCellGroup.h  ClientReportTypesC.h  EigenFilters.h  EigenInterop.h  MathTypesC.h  SigmaPointGenerator.h  TimeValue.h  TimeValueC.h  Tracing.h
inc/unifiedvideoinertial/: BeaconIdTypes.h  ConfigParams.h  ImageProcessing.h  MakeHDKTrackingSystem.h  TrackedBody.h  TrackedBodyTarget.h  TrackingSystem.h  Types.h
inc/unifiedvideointernaltracker/: BodyIdTypes.h  TrackingSystem.h
inc/videotrackershared/: BlobExtractor.h  EdgeHoleBasedLedExtractor.h  HDKData.h  ParseBlobParams.h  cvToEigen.h  cvUtils.h
src/: CMakeLists.txt
src/DirectShowCameraLib/: directx_camera_server.cpp
src/FlexKalman/: CMakeLists.txt  TimeValueC.cpp
src/unifiedvideoinertial/: AngVelTools.h  ApplyIMUToState.h  AssignMeasurementsToLeds.h  BeaconIdTypes.h  BeaconSetupData.cpp  BodyTargetInterface.h  CMakeLists.txt  CannedIMUMeasurement.h  ConfigParams.cpp  ConfigurationParser.h  ForEachTracked.h  HDKLedIdentifier.cpp  HDKLedIdentifierFactory.cpp  HDKLedIdentifierFactory.h  HistoryContainer.h  IMUStateMeasurements.h  ImagePointMeasurement.h  ImageProcessingThread.cpp  ImageProcessingThread.h  LED.h  LedIdentifier.cpp  LedIdentifier.h  MakeHDKTrackingSystem.h  PoseEstimatorTypes.h  PoseEstimator_RANSAC.cpp  PoseEstimator_RANSAC.h  PoseEstimator_RANSACKalman.cpp  PoseEstimator_RANSACKalman.h  PoseEstimator_SCAATKalman.cpp  PoseEstimator_SCAATKalman.h  ProcessIMUMessage.h  RoomCalibration.cpp  RoomCalibration.h  SpaceTransformations.h  TestIMU_Common.h  TestIMU_UKF.cpp  ThreadsafeBodyReporting.h  TimeValueChrono.h  TrackedBody.cpp  TrackedBody.h  (+13 more)
src/unifiedvideoinertial/ImageSources/: CMakeLists.txt  CVImageSource.cpp  FakeImageSource.cpp  ImageSource.cpp  UVCImageSource.cpp
src/unifiedvideoinertialtracker/: ApplyIMUToState.cpp  ApplyIMUToState.h  AssignMeasurementsToLeds.h  BeaconIdTypes.h  CannedIMUMeasurement.h  IMUMessage.h  IMUStateMeasurements.h  ImagePointMeasurement.h  ImageProcessing.h  MakeHDKTrackingSystem.h  ModelTypes.h  PoseEstimatorTypes.h  PoseEstimator_SCAATKalman.cpp  ProcessIMUMessage.h  StateHistory.h  TestIMU_Common.h  ThreadsafeBodyReporting.cpp  TrackedBody.h  TrackedBodyIMU.cpp  TrackedBodyIMU.h  TrackedBodyTarget.cpp  TrackedBodyTarget.h  TrackerThread.h  TrackingSystem_Impl.h
src/unifiedvideoinertialtracker/ImageSources/: ImageSource.h
src/videotrackershared/: BlobExtractionDemo.cpp  BlobExtractor.cpp  CMakeLists.txt  EdgeHoleBasedLedExtractor.cpp  EdgeHoleBlobExtractor.cpp  GenericBlobExtractor.cpp  HDKData.cpp  SBDBlobExtractor.cpp
tests/cplusplus/Kalman/: ContentsInvalid.h  KalmanAbsOrient.cpp  KalmanConstruction.cpp  KalmanNoNaNs.cpp  ManualTest.cpp
tests/cplusplus/Util/: QuatExpMap.cpp
